line wrapping issue resolved. extra div close from qual forms resolved

--- a/src/expdeploy/static/stylesheet.css
+++ b/src/expdeploy/static/stylesheet.css
@@ -33,6 +33,7 @@ body{
 	border-radius: 7.5px;
     box-shadow: 0 2px 3px 1px rgba(0, 0, 0, 0.2);
     padding: 12px;
+    word-wrap: break-word;
 }
 
 .box-basic{
